--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 header{
-  background: url(./images/img5.jpg) center/cover no-repeat;
+  background: url(./images/img5.JPG) center/cover no-repeat;
   height: 100vh;
 }
 
