--- a/style.css
+++ b/style.css
@@ -4,15 +4,17 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: cornsilk;
+}
+
 header{
-  background: url(/images/img5.jpg) center/cover no-repeat;
+  background: url(./images/img5.jpg) center/cover no-repeat;
   background-color: blue;
   height: 100vh;
 }
 
-body{
-  background-color: cornsilk;
-}
+
 
 h1{
   font-size: 50px;
