--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 html{
@@ -25,8 +26,15 @@ h1{
 }
 
 h2{
-  color: yellow;
+  color: whitesmoke;
+  text-align: center;
+  font-size: 35px;
 }
+
+h2:hover{
+  color: limegreen;
+}
+
 
 h3{
   font-size: 30px;
@@ -38,8 +46,16 @@ h3{
 }
 
 h4{
-  font-size: 20px;
-  padding: 10px 10px;
+  color: red;
+  text-align: center;
+  font-size: 28px;
+  text-shadow: black 1px 1px;
+}
+
+
+
+a{
+  text-decoration: none;
 }
 
 p{
@@ -52,7 +68,7 @@ p{
 form{
   font-size: 30px;
   text-align: center;
-  padding: 20% 5%;
+  padding: 20% 5% 15% ;
 }
 
 #results-list{
@@ -85,7 +101,7 @@ input[type=number]::-webkit-outer-spin-button{
 }
 
 ::placeholder {
-  opacity: 0.8;
+  opacity: 0.6;
   color: white;
 }
 
@@ -151,6 +167,7 @@ background-color: darkred;
 .hidden {
   display: none;
 }
+
 
 #map {
   height: 500px;
@@ -241,9 +258,10 @@ footer p{
   background-color: red;
   border-radius: 15px;
 }
-@media (max-height:360px) {
+@media (max-height:380px) {
   form {
-    padding-top: 10%;
+    padding: 4%;
+    
   }
 }
 @media (min-width:800px) {
@@ -256,4 +274,5 @@ footer p{
   label{
     font-size: 35px;
   }
+
 }
